--- a/src/black-hole/inputs/range.scss
+++ b/src/black-hole/inputs/range.scss
@@ -42,15 +42,15 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 input[type="range"]:active {
-  background-color: tint-color($dark-gray, 12);
+  background-color: tint-color($dark-gray, 12%);
 }
 
 input[type="range"]::-moz-range-thumb:active {
-  background-color: tint-color($dark-gray, 12);
+  background-color: tint-color($dark-gray, 12%);
 }
 
 input[type="range"]::-webkit-slider-thumb:active {
-  background-color: tint-color($dark-gray, 12);
+  background-color: tint-color($dark-gray, 12%);
 }
 
 input[type="range"]:disabled {
