feat: update build system and add layout module

--- a/src/black-hole/_colors.scss
+++ b/src/black-hole/_colors.scss
@@ -5,4 +5,4 @@ $gray: #959595 !default;
 $dark-gray: #4f4f4f !default;
 $black: #000 !default;
 
-$border: rgba($cyan, .75) !default;
+$border-color: rgba($cyan, .75) !default;
