--- a/src/black-hole/variables/color.scss
+++ b/src/black-hole/variables/color.scss
@@ -8,5 +8,5 @@
   --gray-color: #{$gray};
   --dark-gray-color: #{$dark-gray};
 
-  --border-color: #{$border};
+  --border-color: #{$border-color};
 }
