--- a/src/black-hole/inputs/button.scss
+++ b/src/black-hole/inputs/button.scss
@@ -1,4 +1,5 @@
 @import "../colors";
+@import "../layout";
 
 input[type="button"],
 input[type="submit"],
@@ -10,9 +11,9 @@ button {
   color: inherit;
   cursor: pointer;
   background-color: rgba($black, .9);
-  border-color: rgba($cyan, .5);
+  border-color: $border-color;
   border-style: solid;
-  border-width: 2px;
+  border-width: $border-size;
   border-radius: 64px;
   outline: inherit;
   box-shadow: 0 3px $gray;
