--- a/src/black-hole/inputs/range.scss
+++ b/src/black-hole/inputs/range.scss
@@ -1,13 +1,14 @@
 @import "../colors";
 @import "../functions";
+@import "../layout";
 
 input[type="range"] {
   width: 100%;
   height: 5px;
   background: $dark-gray;
-  border-color: $border;
+  border-color: $border-color;
   border-style: solid;
-  border-width: 2px;
+  border-width: $border-size;
   border-radius: 10px;
   outline: none;
   transition: .1s;
@@ -19,9 +20,9 @@ input[type="range"]::-moz-range-thumb {
   height: 15px;
   cursor: pointer;
   background: $dark-gray;
-  border-color: $border;
+  border-color: $border-color;
   border-style: solid;
-  border-width: 2px;
+  border-width: $border-size;
   border-radius: 50%;
   transition: .1s;
   appearance: none;
@@ -32,9 +33,9 @@ input[type="range"]::-webkit-slider-thumb {
   height: 15px;
   cursor: pointer;
   background: $dark-gray;
-  border-color: $border;
+  border-color: $border-color;
   border-style: solid;
-  border-width: 2px;
+  border-width: $border-size;
   border-radius: 50%;
   transition: .1s;
   transform: translate(0, -1px);
