--- a/src/black-hole/root.scss
+++ b/src/black-hole/root.scss
@@ -2,7 +2,7 @@
 @import "functions";
 
 * {
-  scrollbar-color: rgba($border, .75) rgba($black, .9);
+  scrollbar-color: rgba($border-color, .75) rgba($black, .9);
   scrollbar-width: thin;
 }
 
@@ -13,15 +13,15 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: $border;
+  background-color: $border-color;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: shade-color($border, 20%);
+  background-color: shade-color($border-color, 20%);
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background-color: shade-color($border, 40%);
+  background-color: shade-color($border-color, 40%);
 }
 
 html,
