--- a/src/black-hole/inputs/range.scss
+++ b/src/black-hole/inputs/range.scss
@@ -1,6 +1,6 @@
-@import "../colors";
-@import "../functions";
-@import "../layout";
+@import "../utils/colors";
+@import "../utils/functions";
+@import "../utils/layout";
 
 input[type="range"] {
   width: 100%;
@@ -29,8 +29,8 @@ input[type="range"]::-moz-range-thumb {
 }
 
 input[type="range"]::-webkit-slider-thumb {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
   background: $dark-gray;
   border-color: $border-color;
