feat: add alternative animation to shapes

--- a/src/vertex/shapes.scss
+++ b/src/vertex/shapes.scss
@@ -1,3 +1,7 @@
+/***************************************
+ *           Border static             *
+ ***************************************/
+
 .border {
   clip-path:
     polygon(
@@ -46,6 +50,10 @@
     );
 }
 
+/***************************************
+ *           Border animation          *
+ ***************************************/
+
 .border-animated {
   clip-path:
     polygon(
@@ -55,6 +63,42 @@
       calc(100% - 24px) 100%,
       0% 100%,
       0% 24px
+    );
+  transition-duration: .25s;
+}
+.border-animated-revers {
+  clip-path:
+    polygon(
+      calc(100% - 24px) 0%,
+      100% 24px,
+      100% 100%,
+      24px 100%,
+      0% calc(100% - 24px),
+      0% 0%
+    );
+  transition-duration: .25s;
+}
+.border-animated-small {
+  clip-path:
+    polygon(
+      12px 0%,
+      100% 0%,
+      100% calc(100% - 12px),
+      calc(100% - 12px) 100%,
+      0% 100%,
+      0% 12px
+    );
+  transition-duration: .25s;
+}
+.border-animated-revers-small {
+  clip-path:
+    polygon(
+      calc(100% - 12px) 0%,
+      100% 12px,
+      100% 100%,
+      12px 100%,
+      0% calc(100% - 12px),
+      0% 0%
     );
   transition-duration: .25s;
 }
@@ -70,20 +114,6 @@
       0% 0%
     );
 }
-
-.border-animated-revers {
-  clip-path:
-    polygon(
-      calc(100% - 24px) 0%,
-      100% 24px,
-      100% 100%,
-      24px 100%,
-      0% calc(100% - 24px),
-      0% 0%
-    );
-  transition-duration: .25s;
-}
-
 .border-animated-revers:hover {
   clip-path:
     polygon(
@@ -95,20 +125,6 @@
       0% 24px
     );
 }
-
-.border-animated-small {
-  clip-path:
-    polygon(
-      12px 0%,
-      100% 0%,
-      100% calc(100% - 12px),
-      calc(100% - 12px) 100%,
-      0% 100%,
-      0% 12px
-    );
-  transition-duration: .25s;
-}
-
 .border-animated-small:hover {
   clip-path:
     polygon(
@@ -120,8 +136,59 @@
       0% 0%
     );
 }
+.border-animated-revers-small:hover {
+  clip-path:
+    polygon(
+      12px 0%,
+      100% 0%,
+      100% calc(100% - 12px),
+      calc(100% - 12px) 100%,
+      0% 100%,
+      0% 12px
+    );
+}
 
-.border-animated-revers-small {
+/***************************************
+ *     Border alternative animation    *
+ ***************************************/
+
+.border-animated-alternative {
+  clip-path:
+    polygon(
+      24px 0%,
+      100% 0%,
+      100% calc(100% - 24px),
+      calc(100% - 24px) 100%,
+      0% 100%,
+      0% 24px
+    );
+  transition-duration: .25s;
+}
+.border-animated-alternative-revers {
+  clip-path:
+    polygon(
+      calc(100% - 24px) 0%,
+      100% 24px,
+      100% 100%,
+      24px 100%,
+      0% calc(100% - 24px),
+      0% 0%
+    );
+  transition-duration: .25s;
+}
+.border-animated-alternative-small {
+  clip-path:
+    polygon(
+      12px 0%,
+      100% 0%,
+      100% calc(100% - 12px),
+      calc(100% - 12px) 100%,
+      0% 100%,
+      0% 12px
+    );
+  transition-duration: .25s;
+}
+.border-animated-alternative-revers-small {
   clip-path:
     polygon(
       calc(100% - 12px) 0%,
@@ -134,14 +201,27 @@
   transition-duration: .25s;
 }
 
-.border-animated-revers-small:hover {
+.border-animated-alternative:hover,
+.border-animated-alternative-small:hover {
   clip-path:
     polygon(
-      12px 0%,
+      4px 0%,
       100% 0%,
-      100% calc(100% - 12px),
-      calc(100% - 12px) 100%,
+      100% calc(100% - 4px),
+      calc(100% - 4px) 100%,
       0% 100%,
-      0% 12px
+      0% 4px
+    );
+}
+.border-animated-alternative-revers:hover,
+.border-animated-alternative-revers-small:hover {
+  clip-path:
+    polygon(
+      calc(100% - 4px) 0%,
+      100% 4px,
+      100% 100%,
+      4px 100%,
+      0% calc(100% - 4px),
+      0% 0%
     );
 }
