fix: add missing import in vertex and update font name in heading

--- a/src/vertex/heading.scss
+++ b/src/vertex/heading.scss
@@ -13,7 +13,7 @@ h5,
 h6,
 .h6 {
   display: block;
-  font-family: Xoloniumn, sans-serif;
+  font-family: Xolonium, sans-serif;
   font-weight: 700;
   color: $heading;
 }
