--- a/src/vertex/variables/_color.scss
+++ b/src/vertex/variables/_color.scss
@@ -1,3 +1,5 @@
 $background: var(--background) !default;
 $heading: var(--heading) !default;
 $text: var(--text) !default;
+$container-background: var(--container-background) !default;
+$border-color: var(--border-color) !default;
